[gd_scene load_steps=3 format=3 uid="uid://mainmenuscn"]

[ext_resource type="Theme" path="res://shared/ui/default_theme.tres" id=1]
[ext_resource type="Script" path="res://defaultTemplate/main_menu.gd" id=2]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0705882, 0.0784314, 0.0941176, 1)

[node name="Center" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -120.0
offset_right = 140.0
offset_bottom = 120.0
alignment = 1

[node name="Logo" type="Label" parent="Center"]
layout_mode = 2
text = "OneDay Template"
horizontal_alignment = 1

[node name="Menu" type="VBoxContainer" parent="Center"]
layout_mode = 2
alignment = 1
custom_constants/separation = 8

[node name="StartButton" type="Button" parent="Center/Menu"]
layout_mode = 2
text = "Start Game"

[node name="LoadButton" type="Button" parent="Center/Menu"]
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="Center/Menu"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="Center/Menu"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="Center/Menu"]
layout_mode = 2
text = "Exit"
